# SimuladorCompQuantico

./: CMakeLists.txt  README.md
env/: environment-gpu.yml  environment-linux.yml  environment-macos.yml  environment-windows.yml  environment.yml
scripts/: create-env.sh
src/: main.cpp  operators_bases.h
